2008-09-20	Jannis Pohlmann <jannis@xfce.org>

	* icons/, xfce4-mixer/xfce-mixer-window.c: Drop xfce4-mixer.{png,svg} 
	  icon in favour of multimedia-volume-control.
	* libxfce4mixer/xfce-mixer-card.{c,h}: Fix compiler warnings due to
	  invalid conversion between "const gchar **" and "gchar * const *".

2008-09-18	Jannis Pohlmann <jannis@xfce.org>

	* autogen.sh: Add git svn revision versioning support.
	* configure.in.in, libxfce4mixer/Makefile.am, xfce4-mixer/Makefile.am:
	  Re-add svn version tag. Add dependency on xfconf.
	* libxfce4mixer/xfce-mixer-card.{c,h},
	  libxfce4mixer/xfce-mixer-preferences.{c,h}, xfce4-mixer/main.c,
	  xfce4-mixer/xfce-mixer-controls-dialog.c,
	  xfce4-mixer/xfce-mixer-window.c, xfce4-mixer/xfce-mixer.c: Add
	  xfconf support.

2008-09-12	Jannis Pohlmann <jannis@xfce.org>

	* NEWS, README, TODO: Updated for the alpha release.

2008-09-09	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4mixer/, panel-plugin/, xfce4-mixer/: Fix a lot of compiler
	  warnings and return statements without a return value.

2008-09-03	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4mixer/xfce-mixer-card-combo.{c,h}: Remove the method
	  xfce_mixer_card_combo_get_n_cards() again. 
	* libxfce4mixer/xfce-mixer-track-combo.c: When assuming the first
	  sound card (if no active sound card was passed to the constructor)
	  first check whether the sound card list is empty.
	* libxfce4mixer/xfce-mixer-utilities.{c,h}: Introduce new method
	  xfce_mixer_utilities_get_n_cards(). Only call
	  xfce_mixer_card_set_ready() if there is a sound card with the given
	  name in xfce_mixer_card_get_card_by_name(). Use internal name
	  instead of the cards display name in the same function.
	* panel-plugin/xfce-mixer-plugin.c: Remember card connection id and
	  properly disconnect from the GstBus when destroying the mixer
	  plugin. Use command member of the plugin struct for the left-click
	  action of the volume button (use "xfce4-mixer" by default).