@@ -1,8 +1,11 @@
 [Desktop Entry]
-Type=Application
+Version=1.0
 Encoding=UTF-8
-_Name=Xfce Mixer
+_Name=Mixer
 _Comment=Audio mixer for the Xfce Desktop Environment
 Icon=xfce4-mixer
 Exec=xfce4-mixer
-
+Type=Application
+StartupNotify=true
+Terminal=false
+Categories=X-XFCE;Audio;Mixer;
