@@ -1,3 +1,8 @@
+2008-09-20	Jannis Pohlmann <jannis@xfce.org>
+
+	* xfce4-mixer.pot, *.po: Merge strings.
+	* de.po: Update German translations.
+
 2008-09-18	Jannis Pohlmann <jannis@xfce.org>
 
 	* xfce4-mixer.pot, *.po: Merge strings.
